--- a/survival.html
+++ b/survival.html
@@ -339,6 +339,9 @@ div.tocify {
     <li>
       <a href="sql.html">SQL Queries With NHANES Data </a>
     </li>
+    <li>
+      <a href="sql2.html">SQL Queries With Cancer Data </a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
@@ -584,6 +587,11 @@ $(document).ready(function() {
 <p>We now try to reproduce our models above using R. We first import the dataset and include the column names. From the output below, we can see that the code successfully imported and tidied the data.</p>
 <pre class="r"><code>library(&quot;survival&quot;)</code></pre>
 <pre><code>## Warning: package &#39;survival&#39; was built under R version 3.5.3</code></pre>
+<pre><code>## 
+## Attaching package: &#39;survival&#39;</code></pre>
+<pre><code>## The following object is masked _by_ &#39;.GlobalEnv&#39;:
+## 
+##     colon</code></pre>
 <pre class="r"><code>library(&quot;survminer&quot;)</code></pre>
 <pre><code>## Warning: package &#39;survminer&#39; was built under R version 3.5.3</code></pre>
 <pre><code>## Loading required package: ggpubr</code></pre>
