--- a/index.html
+++ b/index.html
@@ -241,6 +241,9 @@ $(document).ready(function () {
     <li>
       <a href="sql.html">SQL Queries With NHANES Data </a>
     </li>
+    <li>
+      <a href="sql2.html">SQL Queries With Cancer Data </a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
