--- a/malaria.html
+++ b/malaria.html
@@ -339,6 +339,9 @@ div.tocify {
     <li>
       <a href="sql.html">SQL Queries With NHANES Data </a>
     </li>
+    <li>
+      <a href="sql2.html">SQL Queries With Cancer Data </a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
