--- a/ordinalmodel.html
+++ b/ordinalmodel.html
@@ -345,6 +345,9 @@ div.tocify {
     <li>
       <a href="sql.html">SQL Queries With NHANES Data </a>
     </li>
+    <li>
+      <a href="sql2.html">SQL Queries With Cancer Data </a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
