--- a/index.html
+++ b/index.html
@@ -335,13 +335,13 @@ font-weight: bold;
 <p><br></p>
 <div id="about-me" class="section level4">
 <h4>About Me</h4>
-<p>I am currently a second-year graduate student in the Department of Epidemiology at the Mailman School of Public Health at Columbia University pursuing an Applied Biostatistics certificate. My academic coursework has been geared heavily toward foundational biostatistical skills using various statistical programs and languages, while my experience has involved working with various aspects of data (including data acquisition, cleaning, management, analysis, and reporting) in relation to health research. Taken together, I believe I am a formidable candidate for data scientist, analyst, programmer, and biostatistician positions. I am currently seeking these positions, or any that sufficiently develops my analytic mindset, programming/coding capability, biostatistical skills, and/or knowledge of research methods.</p>
-<p>To view my resume, you can click <a href="images2/resume.pdf">here</a>.</p>
+<p>I am currently a second-year graduate student in the Department of Epidemiology at the Mailman School of Public Health at Columbia University’s Mailman School of Public Health pursuing an Applied Biostatistics certificate with an expected graduation date of May 2019. My academic coursework has been geared heavily toward foundational biostatistical skills using various statistical programs and languages, while my experience has involved working with various aspects of data (including data acquisition, cleaning, management, analysis, and reporting) in relation to health research. Taken together, I believe I am a formidable candidate for data scientist and analyst roles. I am currently seeking these positions, or any that sufficiently develops or hones my: ability to work with and manipulate data, analytic mindset, programming/coding capability, statistical skills, and/or knowledge of research methods.</p>
+<p>Next Steps: I worked hard to familiarize myself with R, SAS, and SQL, and I am always willing to learn new analytic tools, languages, and programs to become better at what I want to do! My next steps are to learn Tableau and Python (numPy, pandas).</p>
 <p><br></p>
 </div>
 <div id="website" class="section level4">
 <h4>Website</h4>
-<p><strong>I built this website using R and GitHub (with a bit of CSS and HTML) to showcase some of the projects that I have worked on over the past couple of years.</strong> I incorporated projects that highlight my various competencies, including:</p>
+<p>I built this website using R and GitHub (with a bit of CSS and HTML) to showcase some of the projects that I have worked on over the past couple of years. I incorporated projects that highlight my various competencies, including:</p>
 <ul>
 <li>Usage of various statistical programs and/or languages (e.g., R, SAS, SQL)</li>
 <li>Fluency in data science skills - EDA, data wrangling, data visualization</li>
@@ -349,7 +349,7 @@ font-weight: bold;
 <li>Knowledge of how to apply various regression techniques and interpret models (e.g., linear, logistic)</li>
 <li>Ability to write scientific or research papers</li>
 </ul>
-<p>Note that all projects use hypothetical data, with the exception of the NHANES and NYC Crime projects.</p>
+<p><strong>You can view my <a href="images2/resume.pdf">resume</a> for a more in-depth look at my skills.</strong></p>
 <p><br></p>
 </div>
 <div id="contact-information" class="section level4">
@@ -361,7 +361,7 @@ Alternate Email: <a href="mailto:jmc525@cornell.edu">jmc525@cornell.edu</a> <br>
 <div id="copyright" class="section level4">
 <h4>Copyright</h4>
 <p>Copyright © 2019 Jacky Choi</p>
-<p>All rights reserved. This website or any portion thereof may not be reproduced or used in any manner whatsoever without the express written permission of the author.</p>
+<p>All rights reserved. This website or any portion thereof may not be reproduced or used in any manner whatsoever without the express written permission of the author. Note that all projects use hypothetical data, with the exception of the NHANES and NYC Crime projects.</p>
 </div>
 </div>
 
