--- a/resume.html
+++ b/resume.html
@@ -265,7 +265,7 @@ $(document).ready(function () {
   <a href="resume.html">Resume</a>
 </li>
 <li>
-  <a href="mailto:&lt;jmc2392@cumc.columbia.edu&gt;">
+  <a href="mailto:&lt;jmc525@cornell.edu&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
   </a>
