--- a/index.html
+++ b/index.html
@@ -359,7 +359,8 @@ Phone: 917-216-1621</p>
 </div>
 <div id="copyright" class="section level4">
 <h4>Copyright</h4>
-<p>Copyright</p>
+<p>Copyright © 2019 Jacky Choi</p>
+<p>All rights reserved. This website or any portion thereof may not be reproduced or used in any manner whatsoever without the express written permission of the author. Note that all projects use hypothetical data, with the exception of the NHANES and NYC Crime projects.</p>
 </div>
 </div>
 
