--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@ font-weight: bold;
 <p><br></p>
 <div id="about-me" class="section level4">
 <h4>About Me</h4>
-<p>I graduated from the <a href="https://www.mailman.columbia.edu/become-student/departments/epidemiology">Department of Epidemiology</a> at the Mailman School of Public Health at Columbia University’s Mailman School of Public Health with an Applied Biostatistics certificate. My academic coursework was geared heavily toward biostatistical skills using various statistical programs and languages, and included courses such as “Data Science ,” “Relational Databases and SQL Programming for Research and Data Science,” Analysis of Categorical Data,“,”Applied Regression (I and II).&quot; During my time there, I was able to learn, apply, and utilize R, SAS, and SQL.</p>
+<p>I graduated from the <a href="https://www.mailman.columbia.edu/become-student/departments/epidemiology">Department of Epidemiology</a> at Columbia University’s Mailman School of Public Health with an Applied Biostatistics certificate. My academic coursework was geared heavily toward biostatistical skills using various statistical programs and languages, and included courses such as “Data Science ,” “Relational Databases and SQL Programming for Research and Data Science,” Analysis of Categorical Data,“,”Applied Regression (I and II).&quot; During my time there, I was able to learn, apply, and utilize R, SAS, and SQL.</p>
 <p>My experience has involved working with various aspects of data (including data acquisition, cleaning, management, analysis, and reporting) in relation to health data. My goal is to utilize data effectively to create meaningful results in a fast-paced and challenging work environment through the application of various statistical and analytic programs, tools, and languages. Taken together, I believe I am a formidable candidate for data scientist and analyst roles. I am currently seeking these positions, or any that sufficiently develops or hones my: ability to work with and manipulate data to derive meaningful results, analytic mindset, programming/coding capability, statistical skills, and/or knowledge of research methods.</p>
 <p><br></p>
 </div>
@@ -359,7 +359,7 @@ Phone: 917-216-1621</p>
 </div>
 <div id="copyright" class="section level4">
 <h4>Copyright</h4>
-<p>Copyright © 2019 Jacky Choi</p>
+<p>Copyright © 2020 Jacky Choi</p>
 <p>All rights reserved. This website or any portion thereof may not be reproduced or used in any manner whatsoever without the express written permission of the author. Note that all projects use hypothetical data, with the exception of the NHANES and NYC Crime projects.</p>
 </div>
 </div>
