--- a/exploratory2.html
+++ b/exploratory2.html
@@ -369,7 +369,7 @@ div.tocify {
   <a href="resume.html">Resume</a>
 </li>
 <li>
-  <a href="mailto:&lt;jmc2392@cumc.columbia.edu&gt;">
+  <a href="mailto:&lt;jmc525@cornell.edu&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
   </a>
@@ -789,7 +789,7 @@ knitr::kable(merged_table)</code></pre>
 <th align="left">Crime Group</th>
 <th align="right">Count with End Date</th>
 <th align="left">Avg. Length With End Date</th>
-<th align="left">SD With End Date</th>
+<th align="right">SD With End Date</th>
 <th align="right">Count w/o End Date</th>
 <th align="right">Avg. Length Excluding NAs</th>
 <th align="right">SD Excluding NAs</th>
@@ -800,7 +800,7 @@ knitr::kable(merged_table)</code></pre>
 <td align="left">Drug-Related</td>
 <td align="right">18293</td>
 <td align="left">156.8032 days</td>
-<td align="left">363.8860 days</td>
+<td align="right">363.8860</td>
 <td align="right">14591</td>
 <td align="right">0.7349879</td>
 <td align="right">13.78610</td>
@@ -809,7 +809,7 @@ knitr::kable(merged_table)</code></pre>
 <td align="left">Sex-Related</td>
 <td align="right">8646</td>
 <td align="left">157.3583 days</td>
-<td align="left">350.1052 days</td>
+<td align="right">350.1052</td>
 <td align="right">7128</td>
 <td align="right">23.3329008</td>
 <td align="right">91.21814</td>
@@ -818,7 +818,7 @@ knitr::kable(merged_table)</code></pre>
 <td align="left">Weapons-Related</td>
 <td align="right">19753</td>
 <td align="left">150.4999 days</td>
-<td align="left">355.5124 days</td>
+<td align="right">355.5124</td>
 <td align="right">15865</td>
 <td align="right">0.3511451</td>
 <td align="right">10.15509</td>
@@ -854,7 +854,7 @@ knitr::kable(merged_table2)</code></pre>
 <th align="left">Borough</th>
 <th align="right">Count with End Date</th>
 <th align="left">Avg. Length With End Date</th>
-<th align="left">SD With End Dates</th>
+<th align="right">SD With End Dates</th>
 <th align="right">Count w/o End Date</th>
 <th align="right">Avg. Length Excluding NAs</th>
 <th align="right">SD Excluding NAs</th>
@@ -865,7 +865,7 @@ knitr::kable(merged_table2)</code></pre>
 <td align="left">bronx</td>
 <td align="right">12848</td>
 <td align="left">216.5919 days</td>
-<td align="left">410.3039 days</td>
+<td align="right">410.3039</td>
 <td align="right">9261</td>
 <td align="right">4.519990</td>
 <td align="right">41.55909</td>
@@ -874,7 +874,7 @@ knitr::kable(merged_table2)</code></pre>
 <td align="left">brooklyn</td>
 <td align="right">15014</td>
 <td align="left">128.3765 days</td>
-<td align="left">331.8315 days</td>
+<td align="right">331.8315</td>
 <td align="right">12615</td>
 <td align="right">4.258720</td>
 <td align="right">38.26172</td>
@@ -883,7 +883,7 @@ knitr::kable(merged_table2)</code></pre>
 <td align="left">manhattan</td>
 <td align="right">9200</td>
 <td align="left">151.6389 days</td>
-<td align="left">349.8756 days</td>
+<td align="right">349.8756</td>
 <td align="right">7380</td>
 <td align="right">4.274063</td>
 <td align="right">38.52996</td>
@@ -892,7 +892,7 @@ knitr::kable(merged_table2)</code></pre>
 <td align="left">queens</td>
 <td align="right">7995</td>
 <td align="left">108.5520 days</td>
-<td align="left">310.8985 days</td>
+<td align="right">310.8985</td>
 <td align="right">6985</td>
 <td align="right">6.540014</td>
 <td align="right">47.96291</td>
@@ -901,7 +901,7 @@ knitr::kable(merged_table2)</code></pre>
 <td align="left">staten_island</td>
 <td align="right">1634</td>
 <td align="left">139.4144 days</td>
-<td align="left">337.9634 days</td>
+<td align="right">337.9634</td>
 <td align="right">1343</td>
 <td align="right">7.300136</td>
 <td align="right">62.23328</td>
