--- a/survival.html
+++ b/survival.html
@@ -363,7 +363,7 @@ div.tocify {
   <a href="resume.html">Resume</a>
 </li>
 <li>
-  <a href="mailto:&lt;jmc2392@cumc.columbia.edu&gt;">
+  <a href="mailto:&lt;jmc525@cornell.edu&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
   </a>
