Remove number and resume

--- a/index.html
+++ b/index.html
@@ -262,9 +262,6 @@ $(document).ready(function () {
   </ul>
 </li>
 <li>
-  <a href="resume.html">Resume</a>
-</li>
-<li>
   <a href="mailto:&lt;jmc525@cornell.edu&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
@@ -348,13 +345,12 @@ font-weight: bold;
 <li>Fluency in data science skills - EDA, data wrangling, data visualization</li>
 <li>Ability to write scientific or research papers</li>
 </ul>
-<p><strong>You can view my <a href="images2/resume.pdf">resume</a> for a more in-depth look at my skills.</strong></p>
+<!-- **You can view my [resume](images2/resume.pdf) for a more in-depth look at my skills.** -->
 <p><br></p>
 </div>
 <div id="contact-information" class="section level4">
 <h4>Contact Information</h4>
-<p>Jacky Choi <br> Primary Email: <a href="mailto:jmc525@cornell.edu">jmc525@cornell.edu</a> <br> Alternate Email: <a href="mailto:jmc2392@caa.columbia.edu">jmc2392@caa.columbia.edu</a><br />
-Phone: 917-216-1621</p>
+<p>Jacky Choi <br> Primary Email: <a href="mailto:jmc525@cornell.edu">jmc525@cornell.edu</a> <br></p>
 <p><br></p>
 </div>
 <div id="copyright" class="section level4">
